layout link working

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,14 @@
 ---
-layout: archive
+layout: single
 ---
+<a
+  href="/gene"> <img src="/assets/images/mm-home-page-feature.jpg">
+</a>
+ 
+
+<figure>
+  <img src="/assets/images/mm-home-page-feature.jpg" alt="Trulli" style="width:100%">
+</figure> 
 
 {{ content }}
 
@@ -18,5 +26,6 @@ layout: archive
     {% include archive-single.html type=entries_layout %}
   {% endfor %}
 </div>
+
 
 {% include paginator.html %}
