--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,17 @@
 ---
 layout: single
 ---
-<a
-  href="/gene"> <img src="/assets/images/mm-home-page-feature.jpg">
-</a>
- 
 
-<figure>
-  <img src="/assets/images/mm-home-page-feature.jpg" alt="Trulli" style="width:100%">
-</figure> 
+<a
+  href="/gene"> <img src="/assets/images/home_genomic_post.png">
+</a>
+
+<hr>
+<a
+  href="/project_home"> <img src="/assets/images/home_projects.png">
+</a>
+
+
 
 {{ content }}
 
